changed the story to be sunnier

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <body>
     <p>It was a dark and stormy night...</p>
-    <p>No it wasn't..</p>
+    <p>the sun was out!</p>
     <p>Github is Fun!</p>
+    <p>Boy was it hot. Cause the sun and stuff</p>
   </body>
 </html>
